--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		      <div class="caption">
 		        <h3>Simple photo gallery.</h3>
 		        <p>This project is a simple photo gallery website.</p>
-		        <p><a href="https://codebruv.github.io" target="_blank" class="btn btn-primary" role="button">View</a></p>
+		        <p><a href="#https://codebruv.github.io" target="_blank" class="btn btn-primary" role="button">View</a></p>
 		      </div>
 		    </div>
 		  </div>
@@ -99,7 +99,7 @@
 		      <div class="caption">
 		        <h3>Newspaper</h3>
 		        <p>This project is a single page newspaper-like website.</p>
-		        <p><a href="https://newspaper.github.io" target="_blank" class="btn btn-primary" role="button">View</a></p>
+		        <p><a href="#https://newspaper.github.io" target="_blank" class="btn btn-primary" role="button">View</a></p>
 		      </div>
 		    </div>
 		  </div>	
@@ -109,7 +109,7 @@
 		      <div class="caption">
 		        <h3>Website</h3>
 		        <p>This project is a simple multiple pages website.</p>
-		        <p><a href="https://blog.github.io" target="_blank" class="btn btn-primary" role="button">View</a></p>
+		        <p><a href="#https://blog.github.io" target="_blank" class="btn btn-primary" role="button">View</a></p>
 		      </div>
 		    </div>
 		  </div>
@@ -128,13 +128,13 @@
 		  </div>
 		</div>
 		<div class="progress">
-		  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width: 15%">
-		    <span class="sr-only">40% Complete (success)</span><p id="progr">JavaScript</p>
+		  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100" style="width: 35%">
+		    <span class="sr-only">35% Complete (success)</span><p id="progr">JavaScript</p>
 		  </div>
 		</div>
 		<div class="progress">
-		  <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-		    <span class="sr-only">20% Complete</span><p id="progr">Python</p>Python
+		  <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+		    <span class="sr-only">40% Complete</span><p id="progr">Python</p>Python
 		  </div>
 		</div>
 		<div class="progress">
