--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		      <div class="caption">
 		        <h3>Simple photo gallery.</h3>
 		        <p>This project is a simple photo gallery website.</p>
-		        <p><a href="#https://codebruv.github.io" target="_blank" class="btn btn-primary" role="button">View</a></p>
+		        <p><a href="https://codebruv.github.io" target="_blank" class="btn btn-primary" role="button">View</a></p>
 		      </div>
 		    </div>
 		  </div>
@@ -99,7 +99,7 @@
 		      <div class="caption">
 		        <h3>Newspaper</h3>
 		        <p>This project is a single page newspaper-like website.</p>
-		        <p><a href="#https://newspaper.github.io" target="_blank" class="btn btn-primary" role="button">View</a></p>
+		        <p><a href="https://newspaper.github.io" target="_blank" class="btn btn-primary" role="button">View</a></p>
 		      </div>
 		    </div>
 		  </div>	
@@ -109,7 +109,7 @@
 		      <div class="caption">
 		        <h3>Website</h3>
 		        <p>This project is a simple multiple pages website.</p>
-		        <p><a href="#https://blog.github.io" target="_blank" class="btn btn-primary" role="button">View</a></p>
+		        <p><a href="https://blog.github.io" target="_blank" class="btn btn-primary" role="button">View</a></p>
 		      </div>
 		    </div>
 		  </div>
