--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 
-	<link rel="stylesheet" type="text/css" href="css\boot.css">
+	<link rel="stylesheet" type="text/css" href="boot.css">
 
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
@@ -85,31 +85,31 @@
 		<div class="row">
 		  <div class="col-sm-6 col-md-4">
 		    <div class="thumbnail">
-		      <img src="img\1.jpg">
+		      <img src="1.jpg">
 		      <div class="caption">
 		        <h3>Simple photo gallery.</h3>
 		        <p>This project is a simple photo gallery website.</p>
-		        <p><a href="https://codebruv.github.io" target="_blank" class="btn btn-primary" role="button">View</a></p>
+		        <p><a href="#https://codebruv.github.io" target="_blank" class="btn btn-primary" role="button">View</a></p>
 		      </div>
 		    </div>
 		  </div>
 		  <div class="col-sm-6 col-md-4">
 		    <div class="thumbnail">
-		      <img src="img\2.jpg">
+		      <img src="2.jpg">
 		      <div class="caption">
 		        <h3>Newspaper</h3>
 		        <p>This project is a single page newspaper-like website.</p>
-		        <p><a href="https://newspaper.github.io" target="_blank" class="btn btn-primary" role="button">View</a></p>
+		        <p><a href="#https://newspaper.github.io" target="_blank" class="btn btn-primary" role="button">View</a></p>
 		      </div>
 		    </div>
 		  </div>	
 		  <div class="col-sm-6 col-md-4">
 		    <div class="thumbnail">
-		      <img src="img\3.jpg">
+		      <img src="3.jpg">
 		      <div class="caption">
 		        <h3>Website</h3>
 		        <p>This project is a simple multiple pages website.</p>
-		        <p><a href="https://blog.github.io" target="_blank" class="btn btn-primary" role="button">View</a></p>
+		        <p><a href="#https://blog.github.io" target="_blank" class="btn btn-primary" role="button">View</a></p>
 		      </div>
 		    </div>
 		  </div>
