--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--************************************************************************************************************************************-->
 <!-- 						Designed and developed by Abdulmajid Abubakar Hussain (CodeBruv)											-->
-<!--							  Developed in HTML, CSS, JavaScript & pure Bootstrap.													-->
+<!--							  Developed in HTML, CSS & Bootstrap.													-->
 <!--												--License--																			-->
 <!--							DO WHAT YOU FEEL LIKE DOING, it's FREE and OpenSource!!!												-->
 <!-- 							Don't forget to follow me on GitHub & Twitter (@codebruv)												-->
@@ -128,8 +128,8 @@
 		  </div>
 		</div>
 		<div class="progress">
-		  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100" style="width: 35%">
-		    <span class="sr-only">35% Complete (success)</span><p id="progr">JavaScript</p>
+		  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
+		    <span class="sr-only">30% Complete (success)</span><p id="progr">JavaScript</p>
 		  </div>
 		</div>
 		<div class="progress">
