--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<div class="jumbotron">
 		  	<h1>Welcome to Code Bruv, Inc.</h1>
 		  	<div id="yabuut">
-			  	<p>On this webpage, I will show you my recent projects, I will show you my programming language skills, and also my contact information. Use the top navigation bar to to toggle around.<br>Don't forget to follow me on social media, let's connect! <br> Thank you for your time, do have a lovely time.
+			  	<p>On this webpage, I will show you my recent projects, I will show you my programming language skills, and also my contact information.<br>Don't forget to follow me on social media, let's connect! <br> Thank you for your time, do have a lovely time.
 			  	</p>
 			</div>
 		  
@@ -172,9 +172,10 @@
 				<strong>Follow me on social media:</strong>
 				<list id="list">
 					<li><a href="https://twitter.com/codebruv" id="liss" target="_blank">Twitter</a></li>
-			        <li><a href="https://twitter.com/codebruv" id="liss" target="_blank">Facebook</a></li>
-			        <li><a href="#" id="liss" target="_blank">WhatsApp</a></li>
-		    	</list>
+					<li><a href="https://github.com/codebruv" id="liss" target="_blank">GitHub</a></li>
+					<li><a href="https://facebook.com/codebruv" id="liss" target="_blank">Facebook</a></li>
+					<li><a href="https://wa.link/mzaohk" id="liss" target="_blank">WhatsApp</a></li>
+		    		</list>
 			</address>
 		</div>
 
