--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<div class="jumbotron">
 		  	<h1>Welcome to Code Bruv, Inc.</h1>
 		  	<div id="yabuut">
-			  	<p>On this webpage, I will show you my recent projects, I will show you my programming language skills, and also my contact information.<br>Don't forget to follow me on social media, let's connect! <br> Thank you for your time, do have a lovely time.
+			  	<p>This webpage is my portfolio, where you will get to see my recent projects, my programming language skills, and my contact information.<br>Don't forget to follow me on social media, let's connect! <br> Thank you for your time, do have a lovely time.
 			  	</p>
 			</div>
 		  
@@ -124,22 +124,22 @@
 
 		<div class="progress">
 		  <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-		    <span class="sr-only">80% Complete (danger)</span><p id="progr">HTML</p>
+		    <span class="sr-only">98% Complete (danger)</span><p id="progr">HTML</p>
 		  </div>
 		</div>
 		<div class="progress">
 		  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
-		    <span class="sr-only">30% Complete (success)</span><p id="progr">JavaScript</p>
+		    <span class="sr-only">80% Complete (success)</span><p id="progr">JavaScript</p>
 		  </div>
 		</div>
 		<div class="progress">
 		  <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-		    <span class="sr-only">40% Complete</span><p id="progr">Python</p>Python
+		    <span class="sr-only">65% Complete</span><p id="progr">Python</p>Python
 		  </div>
 		</div>
 		<div class="progress">
 		  <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-		    <span class="sr-only">60% Complete (warning)</span><p id="progr">CSS</p>
+		    <span class="sr-only">90% Complete (warning)</span><p id="progr">CSS</p>
 		  </div>
 		</div><br>
 
@@ -155,7 +155,7 @@
 
 			<address>
 			  <strong>Code Bruv, Inc.</strong><br>
-			  <p id="liss">RT20, Kandahar New Layout.<br>
+			  <p id="liss">RT20, Rikkos New Layout.<br>
 			  Jos, Plateau. 930232</p>
 			</address>
 
@@ -171,10 +171,10 @@
 			<address>
 				<strong>Follow me on social media:</strong>
 				<list id="list">
-					<li><a href="https://twitter.com/codebruv" id="liss" target="_blank">Twitter</a></li>
+					<li><a href="https://twitter.com/mvjidxx" id="liss" target="_blank">Twitter</a></li>
 					<li><a href="https://github.com/codebruv" id="liss" target="_blank">GitHub</a></li>
-					<li><a href="https://facebook.com/codebruv" id="liss" target="_blank">Facebook</a></li>
-					<li><a href="https://wa.link/mzaohk" id="liss" target="_blank">WhatsApp</a></li>
+					<li><a href="https://facebook.com/mvjidxx" id="liss" target="_blank">Facebook</a></li>
+					<li><a href="https://wa.link/+2348142971640" id="liss" target="_blank">WhatsApp</a></li>
 		    		</list>
 			</address>
 		</div>
