--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<div class="jumbotron">
 		  	<h1>Welcome to Code Bruv, Inc.</h1>
 		  	<div id="yabuut">
-			  	<p>This webpage is my portfolio, where you will get to see my recent projects, my programming language skills, and my contact information.<br>Don't forget to follow me on social media, let's connect! <br> Thank you for your time, do have a lovely time.
+			  	<p>This webpage is my portfolio, where you will get to see my recent projects, my programming language skills, and my contact information.<br>Don't forget to follow me on social media, let's connect! <br> Thank you for your time, let's interact.
 			  	</p>
 			</div>
 		  
@@ -123,22 +123,22 @@
 		<hr><br>
 
 		<div class="progress">
-		  <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+		  <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
 		    <span class="sr-only">98% Complete (danger)</span><p id="progr">HTML</p>
 		  </div>
 		</div>
 		<div class="progress">
-		  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
+		  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
 		    <span class="sr-only">80% Complete (success)</span><p id="progr">JavaScript</p>
 		  </div>
 		</div>
 		<div class="progress">
-		  <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-		    <span class="sr-only">65% Complete</span><p id="progr">Python</p>Python
+		  <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+		    <span class="sr-only">55% Complete</span><p id="progr">Python</p>Python
 		  </div>
 		</div>
 		<div class="progress">
-		  <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+		  <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
 		    <span class="sr-only">90% Complete (warning)</span><p id="progr">CSS</p>
 		  </div>
 		</div><br>
