--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 					<li><a href="https://twitter.com/mvjidxx" id="liss" target="_blank">Twitter</a></li>
 					<li><a href="https://github.com/codebruv" id="liss" target="_blank">GitHub</a></li>
 					<li><a href="https://facebook.com/mvjidxx" id="liss" target="_blank">Facebook</a></li>
-					<li><a href="https://wa.link/+2348142971640" id="liss" target="_blank">WhatsApp</a></li>
+					<li><a href="https://wa.link/pc4v3g" id="liss" target="_blank">WhatsApp</a></li>
 		    		</list>
 			</address>
 		</div>
